# nonebot-plugin-water-geoup-stats

./: .gitignore  README.md  pyproject.toml
src/nonebot_plugin_water_geoup_stats/: __init__.py
