[project]
name = "nonebot-plugin-water-geoup-stats"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "zhongwen-4", email = "2401128923@qq.com"},
]
dependencies = [
    "nonebot2>=2.4.0",
    "nonebot-plugin-localstore>=0.7.2",
    "nonebot-plugin-apscheduler>=0.5.0",
    "aiosqlite>=0.20.0",
    "nonebot-adapter-onebot>=2.4.6",
]
requires-python = ">= 3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
